@@ -14,6 +14,8 @@ Changes in progress
 - Hide full size option post insertion (maximum size width 1024)
 - Slideshow: Added proportional mode
 - Added proxy support
+- Giny Enllaços educatius: added 'ePergam', 'La meva XTEC' and bug fix #111
+- Added constant SCHOOL_CODE 
 
 
 Changes 15.03.20
